Fixed whitespace issue on RHS of the viewport

--- a/src/components/ProjectSection/GraphicsCarousel.css
+++ b/src/components/ProjectSection/GraphicsCarousel.css
@@ -21,6 +21,12 @@
     width: 10px
 }
 
+@media (max-width: 768px) {
+    .carousel-control-prev, .carousel-control-next {
+        display: none;
+    }
+}
+
 .card-img-overlay {
     opacity: 0;
     color: black;
